dev/non_executable_reasons_record/190.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%bash
### å¤‰æ•°ã®è¨­å®š
name=PostgresConnect
classpath=".:/root/git_jupyter_notebook/Java/postgresql-42.1.1.jar"

### ã‚½ãƒ¼ã‚¹ã®ç·¨é›†
cat <<- EOS > ${name}.java
import java.sql.Connection;
import java.sql.DriverManager;
import java.sql.ResultSet;
import java.sql.ResultSetMetaData;
import java.sql.Statement;
import java.util.ArrayList;
import java.util.List;

public class ${name} {
  public static void main(String[] args) throws Exception{
    Connection connection = null;
    Statement statement = null;
    ResultSet resultSet = null;
    
    try{
      //# æ¥ç¶šã€‚pg_shadowã‚’è¡¨ç¤ºã™ã‚‹ãŸã‚ç®¡ç†è€…(postgres)
      connection = DriverManager.getConnection("jdbc:postgresql://10.136.3.189:5432/jsd_test", "postgres", "pass");
      statement = connection.createStatement();
      
      //# SQLæ–‡ç™ºè¡Œ
      resultSet = statement.executeQuery("SELECT * FROM pg_shadow");

      //# å€¤ã®å–å¾—ã€‚resultSetã‹ã‚‰å€¤ã‚’å–ã‚Šå‡ºã—ã¦ã„ã‚‹ã€‚fieldsã«å–ã‚Šå‡ºã—ãŸå€¤ã‚’1è¡Œãšã¤è¿½åŠ ã—ã¦ã„ã‚‹
      List<String> fields = new ArrayList<String>();
      ResultSetMetaData rsmd = resultSet.getMetaData();
      for (int i = 1; i <= rsmd.getColumnCount(); i++) {
        fields.add(rsmd.getColumnName(i));
      }

      //# çµæœã®å‡ºåŠ›
      int rowCount = 0;
      while (resultSet.next()) {
        rowCount++;

        System.out.println("---------------------------------------------------");
        System.out.println("--- Rows:" + rowCount);
        System.out.println("---------------------------------------------------");

        //# å€¤ã¯ã€ã€ŒresultSet.getString(<ãƒ•ã‚£ãƒ¼ãƒ«ãƒ‰å>)ã€ã§å–å¾—ã™ã‚‹ã€‚
        for (String field : fields) {
          System.out.println(field + ":" + resultSet.getString(field));
        }
      }
            
    } finally {
      //# æ¥ç¶šã‚’åˆ‡æ–­ã™ã‚‹
      if (resultSet != null) {
        resultSet.close();
      }
      if (statement != null) {
        statement.close();
      }
      if (connection != null) {
        connection.close();
      }
    }
  }
}
EOS

### ã‚³ãƒ³ãƒ‘ã‚¤ãƒ«
#javac ${name}.java
javac -encoding UTF-8 ${name}.java

### å®Ÿè¡Œ
java -classpath ${classpath} ${name}
------------------

[0;36m  File [0;32m"<ipython-input-1-3bae8d8f0600>"[0;36m, line [0;32m9[0m
[0;31m    cat <<- EOS > ${name}.java[0m
[0m                  ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-3bae8d8f0600>, line 9)

Executability                            : False
